# r2mini

./: .gitignore  README.md
r2mini/: package.xml  setup.cfg  setup.py
r2mini_bringup/: package.xml  setup.cfg  setup.py
r2mini_bringup/config/: g2.yaml
r2mini_bringup/launch/: r2mini_bringup.launch.py  r2mini_lidar.launch.py
r2mini_bringup/param/: ydlidar_x4.yaml
r2mini_bringup/script/: create_udev_rules.sh
r2mini_cartographer/: package.xml  setup.cfg  setup.py
r2mini_cartographer/config/: r2mini.lua
r2mini_cartographer/launch/: occupancy_grid.launch.py  r2mini_cartographer.launch.py  r2mini_cartographer_rviz.launch.py
r2mini_description/: package.xml  setup.cfg  setup.py
r2mini_description/launch/: r2mini_description.launch.py  r2mini_description_rviz.launch.py  robot_state_publisher.launch.py
r2mini_description/urdf/: r2mini.urdf
r2mini_navigation/: package.xml  setup.cfg  setup.py
r2mini_navigation/launch/: r2mini_navigation.launch.py  r2mini_navigation_rviz.launch.py
r2mini_navigation/map/: r2mini_world.yaml
r2mini_node/: package.xml  setup.cfg  setup.py
r2mini_node/config/: r2mini_mcu.yaml
r2mini_node/launch/: r2mini_node.launch.py
r2mini_node/param/: r2mini_mcu.yaml
r2mini_node/r2mini_node/: packet_handler.py  r2mini_mcu.py  r2mini_motor.py
r2mini_robot/: package.xml  setup.cfg  setup.py
r2mini_robot/config/: r2mini.yaml
r2mini_robot/launch/: r2mini_robot.launch.py
r2mini_robot/r2mini_robot/: robot_control copy.py  robot_control.py  robot_driver copy.py  robot_driver.py
r2mini_teleop/: package.xml  setup.cfg  setup.py
(+3 files in other folders)
