<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2mini</name>
  <version>0.0.0</version>
  <description>Meta package for r2mini.</description>
  <maintainer email="kucira00@gmail.com">Dr.K</maintainer>
  <license>Apache License, Version 2.0</license>

  <depend>r2mini_bringup</depend>
  <depend>r2mini_cartographer</depend>
  <depend>r2mini_description</depend>
  <depend>r2mini_navigation</depend>
  <depend>r2mini_robot</depend>
  <depend>r2mini_teleop</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
